# Tarantula

./: .gitignore
WebServices/: EventDataWebService.py  EventProcessorBase.py  PlaylistEntry.py  PlaylistEvent.py  PlaylistToolsWebService.py  PluginDataWebService.py  SQLEngine.py  ScheduleDataWebService.py  TarantulaWebServiceCore.py  datatypes.py  misc.py
WebServices/EventProcessors/: EventProcessorDemo.py  EventProcessor_Demo.py  EventProcessor_Fill.py  EventProcessor_Live.py  EventProcessor_Show.py
config_base/: Base.xml  WebService.xml
config_base/Devices/: CasparGraphics.xml  CasparVideo.xml  DemoCG.xml  DemoVideo.xml  DemoXP.xml  Hedco.xml  PiVTVideo.xml
config_base/EventProcessors/: DemoEventProcessor.xml  FillEventProcessor.xml  GFXEventProcessor.xml  LazyEventProcessor.xml  LiveEventProcessor.xml  ShowEventProcessor.xml
config_base/Logs/: Syslog.xml
include/: BaseConfigLoader.h  CGDevice.h  Channel.h  CrosspointDevice.h  MouseCatcherCommon.h  MouseCatcherCore.h  PlaylistDB.h  SQLiteDB.h  TarantulaPlugin.h  VideoDevice.h
src/: CMakeLists.txt  Makefile  support_libs_build.cmake
src/Common/: BaseConfigLoader.cpp  PluginConfigLoader.cpp
src/MouseCatcher/: MouseCatcherCore.cpp
src/MouseCatcher_PluginArchive/EventProcessor_Fill/: EventProcessor_Fill.cpp  Makefile
src/MouseCatcher_PluginArchive/EventProcessor_GFXHelper/: EventProcessor_GFXHelper.cpp
src/MouseCatcher_PluginArchive/EventProcessor_LiveShow/: Makefile
src/MouseCatcher_PluginArchive/EventProcessor_Show/: EventProcessor_Show.cpp  Makefile
src/MouseCatcher_PluginArchive/EventSource_Demo/: Makefile
src/MouseCatcher_PluginArchive/EventSource_Web/: EventSource_Web.cpp  HTTPConnection.cpp  Makefile
src/Optional/: SQLiteDB.cpp
src/Plugins/: CMakeLists.txt
src/Plugins/CGDevice_Caspar/: Makefile
src/Plugins/CGDevice_Demo/: Makefile
src/Plugins/CrosspointDevice_Demo/: Makefile
src/Plugins/CrosspointDevice_Hedco/: Makefile
src/Plugins/EventProcessor_Demo/: EventProcessor_Demo.cpp
src/Plugins/EventProcessor_LiveShow/: EventProcessor_LiveShow.cpp
src/Plugins/EventSource_Demo/: EventSource_Demo.cpp
src/Plugins/EventSource_XML_Network/: EventSource_XML_Network.cpp  Makefile
src/Plugins/VideoDevice_Caspar/: Makefile
src/Plugins/VideoDevice_Demo/: Makefile
src/Plugins/VideoDevice_PiVT/: Makefile
src/Tarantula/: Channel.cpp  Makefile  PlaylistDB.cpp  Tarantula.cpp  TarantulaPluginLoader.cpp
(+1 files in other folders)
